--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,7 @@
         />
     </head>
     <body>
-        <header class="container">
-            <div class="header-sidebar">
+        <header class="container header-sidebar">
             <div class="header-styles">
                 <h2>
                     <a href="index.html"
@@ -37,209 +36,204 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a href="tel:+48111111111">+48 111 111 111</a>
             </div>
-            </div>
         </header>
         <main>
-            <div class="container">
-            <div class="portfolio">
-                <div class="portfolio-filters-buttons">
-                    <button class="filters-buttons" type="button">
-                        Wszystkie
-                    </button>
-                    <button class="filters-buttons" type="button">
-                        Strony
-                    </button>
-                    <button class="filters-buttons" type="button">
-                        Aplikacje
-                    </button>
-                    <button class="filters-buttons" type="button">
-                        Dizajn
-                    </button>
-                    <button class="filters-buttons" type="button">
-                        Marketing
-                    </button>
+                <div class="container portfolio">
+                    <div class="portfolio-filters-buttons">
+                        <button class="filters-buttons" type="button">
+                            Wszystkie
+                        </button>
+                        <button class="filters-buttons" type="button">
+                            Strony
+                        </button>
+                        <button class="filters-buttons" type="button">
+                            Aplikacje
+                        </button>
+                        <button class="filters-buttons" type="button">
+                            Dizajn
+                        </button>
+                        <button class="filters-buttons" type="button">
+                            Marketing
+                        </button>
+                    </div>
+                    <ul class="portfolio-project-list">
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/technocrack.jpg"
+                                    alt="Web page"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Technocrack
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Strona internetowa
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/basketball.jpg"
+                                    alt="Design"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Grafika New Orlean vs Golden Star
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Dizajn
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/seafood.jpg"
+                                    alt="App"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Restauracja Seafood
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Aplikacja
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/phones.jpg"
+                                    alt="Marketing"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Projekt Prime
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Marketing
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/boxes.jpg"
+                                    alt="App"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Projekt Boxes
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Aplikacja
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/inspirations.jpg"
+                                    alt="Web page"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Inspiration has no Borders
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Strona internetowa
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/magazyn.jpg"
+                                    alt="Design"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Magazyn Limited Edition
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Dizajn
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/projectlab.jpg"
+                                    alt="Marketing"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Projekt LAB
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Marketing
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="portfolio-project">
+                                <img
+                                    src="images/growing.jpg"
+                                    alt="App"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <h4 class="portfolio-project-name">
+                                        Growing Business
+                                    </h4>
+                                    <p class="portfolio-project-description">
+                                        Aplikacja
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="portfolio-project-list">
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/technocrack.jpg"
-                                alt="Web page"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Technocrack
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Strona internetowa
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/basketball.jpg"
-                                alt="Design"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Grafika New Orlean vs Golden Star
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Dizajn
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/seafood.jpg"
-                                alt="App"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Restauracja Seafood
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Aplikacja
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/phones.jpg"
-                                alt="Marketing"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Projekt Prime
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Marketing
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/boxes.jpg"
-                                alt="App"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Projekt Boxes
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Aplikacja
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/inspirations.jpg"
-                                alt="Web page"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Inspiration has no Borders
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Strona internetowa
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/magazyn.jpg"
-                                alt="Design"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Magazyn Limited Edition
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Dizajn
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/projectlab.jpg"
-                                alt="Marketing"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Projekt LAB
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Marketing
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="portfolio-project">
-                            <img
-                                src="images/growing.jpg"
-                                alt="App"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <h4 class="portfolio-project-name">
-                                    Growing Business
-                                </h4>
-                                <p class="portfolio-project-description">
-                                    Aplikacja
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </div>
             </div>
         </main>
-        <footer class="container">
-            <div class="footer-sidebar">
-            <h2 class="footer-styles">
+        <footer class="footer-sidebar">
+            <h2 class="container footer-styles">
                 <a href="index.html"
                     ><span class="logo-web-footer">Web</span
                     ><span class="logo-studio-footer">Studio</span></a
                 >
             </h2>
-            <div class="footer-address">
+            <div class="container footer-address">
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-                <br />
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
                 <a href="tel:+48111111111">+48 111 111 111</a>
-            </div>
             </div>
         </footer>
     </body>
