--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header class="container header-sidebar">
             <div class="header-styles">
                 <h2>
-                    <a href="index.html"
-                        ><span class="logo-web">Web</span
+                    <a class="logo" href="index.html"
+                        >Web</span
                         ><span class="logo-studio">Studio</span></a
                     >
                 </h2>
@@ -198,8 +198,8 @@
         <footer class="footer-sidebar">
             <div class="container">
                 <h2 class="footer-styles">
-                    <a href="index.html"
-                        ><span class="logo-web-footer">Web</span
+                    <a class="logo" href="index.html"
+                        >Web</span
                         ><span class="logo-studio-footer">Studio</span></a
                     >
                 </h2>
